# anylinuxfs-gui

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  package-lock.json  package.json  renovate.json  svelte.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: fix-paths.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  cli.rs  error.rs  lib.rs  main.rs  paths.rs
src-tauri/src/commands/: action.rs  apk.rs  config.rs  disk.rs  image.rs  log.rs  mod.rs  shell.rs  status.rs
src/components/: ConfigPanel.svelte  DiskCard.svelte  DiskList.svelte  LogViewer.svelte  MountStatus.svelte  PassphraseDialog.svelte  PreferencesPanel.svelte  Sidebar.svelte
src/lib/: api.ts  constants.ts  errors.ts  logger.ts  types.ts
src/lib/stores/: config.ts  disks.ts  logs.ts  status.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/actions/: +page.svelte
src/routes/images/: +page.svelte
src/routes/logs/: +page.svelte
src/routes/preferences/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/shell/: +page.svelte
