[package]
name = "anylinuxfs-gui"
version = "0.2.0"
edition = "2021"

[lib]
name = "anylinuxfs_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
notify = "6"
toml = "0.8"
dirs = "5"
portable-pty = "0.8"
