[package]
name = "anylinuxfs-gui"
version = "0.2.0"
edition = "2021"

[lib]
name = "anylinuxfs_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
notify = "8"
toml = "0.9"
dirs = "6"
portable-pty = "0.9"
