[package]
name = "anylinuxfs-gui"
version = "0.6.0"
edition = "2021"

[lib]
name = "anylinuxfs_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
notify = "8"
toml = "1.0"
dirs = "6"
portable-pty = "0.9"
tauri-plugin-process = "2.3.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
objc2-foundation = "0.3"
tauri-plugin-autostart = "2.5.1"
